--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color: #66b2ff;
   --secondary-color: #3399ff;
-  --background-color: rgba(30, 30, 30, 0.85);
+  --background-color: rgba(30, 30, 30, 0.75);  /* Changer la transparence à 75% */
   --text-color: #f0f0f0;
   --link-color: #66b2ff;
   --hover-link-color: #3399ff;
@@ -22,7 +22,7 @@ html, body {
   padding: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: var(--text-color);
-  background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), 
+  background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), 
     url('https://raw.githubusercontent.com/karltech91/KarlTech/main/support-informatique.jpg') no-repeat center center fixed;
   background-size: cover;
   display: flex;
